Add GitHub Actions workflows for automation (#220)
- check-messages.yml: Auto-detect new messages every 4 hours, create GitHub Issues
- repo-maintenance.yml: Weekly validation, archiving, and statistics updates (YAML fixed)
- validate-data.yml: Daily validation + PR checks for schema compliance

These workflows complete the Enhanced Messaging System v2.0 implementation.

Co-authored-by: Manus AI <manus@manus.im>

--- a/.github/workflows/repo-maintenance.yml
+++ b/.github/workflows/repo-maintenance.yml
@@ -60,11 +60,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No maintenance changes to commit"
           else
-            git commit -m "🔧 Weekly repository maintenance [skip ci]
-
-- Archived old messages
-- Updated statistics
-- Validated repository structure"
+            git commit -m "🔧 Weekly repository maintenance [skip ci] - Archived old messages, updated statistics, validated repository structure"
             git push
           fi
       
